update docker-compose.yml, update pgsql-kivi/Dockerfile, remove init script, add some db dumps with minimal example data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,20 @@ services:
     image: mypgsql
     container_name: mypgsql-test
     restart: always
+    environment:
+      - "POSTGRES_USER=kivitendo"
+      - "POSTGRES_PASSWORD=mypass123"
   adminer:
     image: adminer
     restart: always
     ports:
       - "50102:8080"
-#  pgadmin:
-#    image: dpage/pgadmin4
-#    environment:
-#      - "PGADMIN_DEFAULT_EMAIL=user@example.com"
-#      - "PGADMIN_DEFAULT_PASSWORD=1234"
-#    ports:
-#      - "50105:80"
+  pgadmin:
+    image: dpage/pgadmin4
+    restart: always
+    ports:
+      - "50105:80"
+    environment:
+      - "PGADMIN_DEFAULT_EMAIL=user@example.com"
+      - "PGADMIN_DEFAULT_PASSWORD=1234"
+
