db/Dockerfile add locale, web/000-kivitendo.conf use default logs, web/Dockerfile + web/docker-entrypoint.sh don't include kivitendo.conf

--- a/web/000-kivitendo.conf
+++ b/web/000-kivitendo.conf
@@ -19,7 +19,8 @@
     # alert, emerg.
     LogLevel warn
 
-    ErrorLog ${APACHE_LOG_DIR}/kivitendo.error.log
-    CustomLog ${APACHE_LOG_DIR}/kivitendo.access.log combined
+    # (use default logs)
+    #ErrorLog ${APACHE_LOG_DIR}/kivitendo.error.log
+    #CustomLog ${APACHE_LOG_DIR}/kivitendo.access.log combined
 
 </VirtualHost>
