update server name

--- a/web/kivitendo.conf
+++ b/web/kivitendo.conf
@@ -28,7 +28,7 @@ failed_login_penalty = 5
 #
 # If 'module' is set to 'DB' then this database also contains the
 # users' passwords.
-host     = mypgsql-test
+host     = db
 port     = 5432
 db       = kivitendo_auth
 user     = kivitendo
