--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   web:
     build: ./web
@@ -16,6 +15,8 @@ services:
     environment:
       - "POSTGRES_USER=kivitendo"
       - "POSTGRES_PASSWORD=mypass123"
+    volumes:
+      - kivi-db:/var/lib/postgresql/data
     restart: unless-stopped
   # pgadmin:
   #   image: dpage/pgadmin4
@@ -39,3 +40,6 @@ services:
     restart: always
     ports:
       - 127.0.0.1:2025:1080
+
+volumes:
+  kivi-db:
